--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,15 +10,15 @@ license = {text = "MIT"}
 keywords = ["segmentation", "clustering", "insurance", "UKPLC", "CLTV", "HDBSCAN", "KMeans"]
 
 dependencies = [
-    "pandas==2.2.2",
-    "numpy==1.26.4",
-    "scikit-learn==1.5.2",
-    "scipy==1.13.1",
-    "matplotlib==3.8.4",
-    "joblib==1.4.2",
-    "pyyaml==6.0.2",
-    "shap==0.46.0; python_version >= '3.8'",
-    "hdbscan==0.8.38; python_version >= '3.8'"
+    "pandas>=2.2.2,<3.0",
+    "numpy>=1.26.4,<3.0",
+    "scikit-learn>=1.5.2,<2.0",
+    "scipy>=1.13.1,<2.0",
+    "matplotlib>=3.8.4,<4.0",
+    "joblib>=1.4.2,<2.0",
+    "pyyaml>=6.0.2,<7.0",
+    "shap>=0.46.0,<1.0; python_version >= '3.8'",
+    "hdbscan>=0.8.38,<0.9; python_version >= '3.8'"
 ]
 
 [project.optional-dependencies]
