Add initial data files for clustering analysis
- Created 'cluster_vs_existing_segment.csv' to store cluster comparison data.
- Added 'explain.json' as a placeholder for future explanations or metadata.
- Introduced 'internal_metrics.json' to capture clustering performance metrics including silhouette score, Calinski-Harabasz index, and Davies-Bouldin index.

--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,6 @@ env/
 *.ipynb
 
 # Data files (CSV, Parquet, Excel)
-*.csv
 *.parquet
 *.xlsx
 *.xls
@@ -59,12 +58,12 @@ env/
 *.h5
 *.hdf5
 
-# Output directories
-out*/
-output*/
-results*/
-sweep*/
-reports/
+# Data directories (ignore input data, keep output folders)
+data/
+Data/
+DATA/
+
+# Log files
 *.log
 
 # Environment variables
